# wasm-calc

./: README.md
add/: Cargo.toml
add/src/: bindings.rs  lib.rs
add/wit/: operator.wit
app/: Cargo.toml
app/src/: main.rs
calc/: Cargo.toml
calc/src/: bindings.rs  main.rs
calc/wit/: calc.wit
